--- a/wundercase/www/index.html
+++ b/wundercase/www/index.html
@@ -43,34 +43,100 @@
 	<section class="s_super_container">
 		<section class="s_middle_display" style="">
 			<div class="container-fluid" style="">
-				<div class="row f_elast" style="background-color: #123; overflow: hidden; ">
+				<div class="row f_elast" style="background-color: #123; position: relative; overflow-y: scroll;">
 					<div class="col-lg-12">
-						Arise features a brand new voice cast, compared with the casts of the original film and Stand Alone Complex television anime series. Maaya Sakamoto replaces Atsuko Tanaka as the voice of Major Motoko Kusanagi, Sakamoto having only previously voiced the Major as a child.[2] Other changes to the cast include Kenichirou Matsuda as Batou, Tarusuke Shingaki as Togusa, Ikyuu Jyuku as Chief Daisuke Aramaki, Tomoyuki Dan as Ishikawa, Takuro Nakakuni as Saito, Yōji Ueda as Paz, and Kazuya Nakai as Borma.[4] Miyuki Sawashiro will provide the voice of the series' think tanks the Logicoma (ロジコマ Rojikoma?), short for Logistics Conveyer Machine (ロジスティックス・コンベイヤー・マシン Rojisutikkusu Konbeiyā Mashin?). The Logicoma will also feature in anime shorts included on the Blu-ray releases titled Logicoma Beat (ロジコマ・ビート Rojikoma Bīto?).
+						<p>Arise features a brand new voice cast, compared with the casts of the original film and Stand Alone Complex television anime series. Maaya Sakamoto replaces Atsuko Tanaka as the voice of Major Motoko Kusanagi, Sakamoto having only previously voiced the Major as a child.[2] Other changes to the cast include Kenichirou Matsuda as Batou, Tarusuke Shingaki as Togusa, Ikyuu Jyuku as Chief Daisuke Aramaki, Tomoyuki Dan as Ishikawa, Takuro Nakakuni as Saito, Yōji Ueda as Paz, and Kazuya Nakai as Borma.[4] Miyuki Sawashiro will provide the voice of the series' think tanks the Logicoma (ロジコマ Rojikoma?), short for Logistics Conveyer Machine (ロジスティックス・コンベイヤー・マシン Rojisutikkusu Konbeiyā Mashin?). The Logicoma will also feature in anime shorts included on the Blu-ray releases titled Logicoma Beat (ロジコマ・ビート Rojikoma Bīto?).
 
 						New characters in the first of the episodes include Kurtz (クルツ Kurutsu?), voiced by Mayumi Asano in Japanese and by Mary Elizabeth McGlynn (the previous voice of the Major) in English, the head of the Army 501 Organization (陸軍５０１機関 Rikugun Go Maru Ichi Kikan?), the firm who converted Motoko Kusanagi into a full cyborg and who Kusanagi would replace in the organization had she not joined Section 9; Raizo (ライゾー Raizō?), voiced by Takanori Hoshino, a combat cyborg for the 501 Organization that uses electricity as weapons; Ibachi (イバチ?), voiced by Masahiro Mamiya, a combat cyborg for the 501 Organization skilled in bōjutsu and armed with hidden machine guns; Tsumugi (ツムギ?), voiced by Kenji Nojima, a tactical cyborg for the 501 Organization that has a set of twins' cyberbrains in its head who always talk to each other; and Lieutenant colonel Mamuro (マムロ?), voiced by Atsushi Miyauchi, the leader of the 501 Organization who raised Kusanagi but has disappeared, having had something to do with arms dealing.
 						Arise features a brand new voice cast, compared with the casts of the original film and Stand Alone Complex television anime series. Maaya Sakamoto replaces Atsuko Tanaka as the voice of Major Motoko Kusanagi, Sakamoto having only previously voiced the Major as a child.[2] Other changes to the cast include Kenichirou Matsuda as Batou, Tarusuke Shingaki as Togusa, Ikyuu Jyuku as Chief Daisuke Aramaki, Tomoyuki Dan as Ishikawa, Takuro Nakakuni as Saito, Yōji Ueda as Paz, and Kazuya Nakai as Borma.[4] Miyuki Sawashiro will provide the voice of the series' think tanks the Logicoma (ロジコマ Rojikoma?), short for Logistics Conveyer Machine (ロジスティックス・コンベイヤー・マシン Rojisutikkusu Konbeiyā Mashin?). The Logicoma will also feature in anime shorts included on the Blu-ray releases titled Logicoma Beat (ロジコマ・ビート Rojikoma Bīto?).
 
-						New characters in the first of the episodes include Kurtz (クルツ Kurutsu?), voiced by Mayumi Asano in Japanese and by Mary Elizabeth McGlynn (the previous voice of the Major) in English, the head of the Army 501 Organization (陸軍５０１機関 Rikugun Go Maru Ichi Kikan?), the firm who converted Motoko Kusanagi into a full cyborg and who Kusanagi would replace in the organization had she not joined Section 9; Raizo (ライゾー Raizō?), voiced by Takanori Hoshino, a combat cyborg for the 501 Organization that uses electricity as weapons; Ibachi (イバチ?), voiced by Masahiro Mamiya, a combat cyborg for the 501 Organization skilled in bōjutsu and armed with hidden machine guns; Tsumugi (ツムギ?), voiced by Kenji Nojima, a tactical cyborg for the 501 Organization that has a set of twins' cyberbrains in its head who always talk to each other; and Lieutenant colonel Mamuro (マムロ?), voiced by Atsushi Miyauchi, the leader of the 501 Organization who raised Kusanagi but has disappeared, having had something to do with arms dealing.
+						New characters in the first of the episodes include Kurtz (クルツ Kurutsu?), voiced by Mayumi Asano in Japanese and by Mary Elizabeth McGlynn (the previous voice of the Major) in English, the head of the Army 501 Organization (陸軍５０１機関 Rikugun Go Maru Ichi Kikan?), the firm who converted Motoko Kusanagi into a full cyborg and who Kusanagi would replace in the organization had she not joined Section 9; Raizo (ライゾー Raizō?), voiced by Takanori Hoshino, a combat cyborg for the 501 Organization that uses electricity as weapons; Ibachi (イバチ?), voiced by Masahiro Mamiya, a combat cyborg for the 501 Organization skilled in bōjutsu and armed with hidden machine guns; Tsumugi (ツムギ?), voiced by Kenji Nojima, a tactical cyborg for the 501 Organization that has a set of twins' cyberbrains in its head who always talk to each other; and Lieutenant colonel Mamuro (マムロ?), voiced by Atsushi Miyauchi, the leader of the 501 Organization who raised Kusanagi but has disappeared, having had something to do with arms dealing.</p>
 					</div>
 				</div>
-				<div class="row f_elast" style="background-color: #789; overflow: hidden; ">
+				<div class="row f_elast" style="background-color: #789; position: relative; overflow-y: scroll;">
 					<div class="col-lg-12">
-						Arise features a brand new voice cast, compared with the casts of the original film and Stand Alone Complex television anime series. Maaya Sakamoto replaces Atsuko Tanaka as the voice of Major Motoko Kusanagi, Sakamoto having only previously voiced the Major as a child.[2] Other changes to the cast include Kenichirou Matsuda as Batou, Tarusuke Shingaki as Togusa, Ikyuu Jyuku as Chief Daisuke Aramaki, Tomoyuki Dan as Ishikawa, Takuro Nakakuni as Saito, Yōji Ueda as Paz, and Kazuya Nakai as Borma.[4] Miyuki Sawashiro will provide the voice of the series' think tanks the Logicoma (ロジコマ Rojikoma?), short for Logistics Conveyer Machine (ロジスティックス・コンベイヤー・マシン Rojisutikkusu Konbeiyā Mashin?). The Logicoma will also feature in anime shorts included on the Blu-ray releases titled Logicoma Beat (ロジコマ・ビート Rojikoma Bīto?).
+						<p>Arise features a brand new voice cast, compared with the casts of the original film and Stand Alone Complex television anime series. Maaya Sakamoto replaces Atsuko Tanaka as the voice of Major Motoko Kusanagi, Sakamoto having only previously voiced the Major as a child.[2] Other changes to the cast include Kenichirou Matsuda as Batou, Tarusuke Shingaki as Togusa, Ikyuu Jyuku as Chief Daisuke Aramaki, Tomoyuki Dan as Ishikawa, Takuro Nakakuni as Saito, Yōji Ueda as Paz, and Kazuya Nakai as Borma.[4] Miyuki Sawashiro will provide the voice of the series' think tanks the Logicoma (ロジコマ Rojikoma?), short for Logistics Conveyer Machine (ロジスティックス・コンベイヤー・マシン Rojisutikkusu Konbeiyā Mashin?). The Logicoma will also feature in anime shorts included on the Blu-ray releases titled Logicoma Beat (ロジコマ・ビート Rojikoma Bīto?).
 
 						New characters in the first of the episodes include Kurtz (クルツ Kurutsu?), voiced by Mayumi Asano in Japanese and by Mary Elizabeth McGlynn (the previous voice of the Major) in English, the head of the Army 501 Organization (陸軍５０１機関 Rikugun Go Maru Ichi Kikan?), the firm who converted Motoko Kusanagi into a full cyborg and who Kusanagi would replace in the organization had she not joined Section 9; Raizo (ライゾー Raizō?), voiced by Takanori Hoshino, a combat cyborg for the 501 Organization that uses electricity as weapons; Ibachi (イバチ?), voiced by Masahiro Mamiya, a combat cyborg for the 501 Organization skilled in bōjutsu and armed with hidden machine guns; Tsumugi (ツムギ?), voiced by Kenji Nojima, a tactical cyborg for the 501 Organization that has a set of twins' cyberbrains in its head who always talk to each other; and Lieutenant colonel Mamuro (マムロ?), voiced by Atsushi Miyauchi, the leader of the 501 Organization who raised Kusanagi but has disappeared, having had something to do with arms dealing.
 						Arise features a brand new voice cast, compared with the casts of the original film and Stand Alone Complex television anime series. Maaya Sakamoto replaces Atsuko Tanaka as the voice of Major Motoko Kusanagi, Sakamoto having only previously voiced the Major as a child.[2] Other changes to the cast include Kenichirou Matsuda as Batou, Tarusuke Shingaki as Togusa, Ikyuu Jyuku as Chief Daisuke Aramaki, Tomoyuki Dan as Ishikawa, Takuro Nakakuni as Saito, Yōji Ueda as Paz, and Kazuya Nakai as Borma.[4] Miyuki Sawashiro will provide the voice of the series' think tanks the Logicoma (ロジコマ Rojikoma?), short for Logistics Conveyer Machine (ロジスティックス・コンベイヤー・マシン Rojisutikkusu Konbeiyā Mashin?). The Logicoma will also feature in anime shorts included on the Blu-ray releases titled Logicoma Beat (ロジコマ・ビート Rojikoma Bīto?).
 
-						New characters in the first of the episodes include Kurtz (クルツ Kurutsu?), voiced by Mayumi Asano in Japanese and by Mary Elizabeth McGlynn (the previous voice of the Major) in English, the head of the Army 501 Organization (陸軍５０１機関 Rikugun Go Maru Ichi Kikan?), the firm who converted Motoko Kusanagi into a full cyborg and who Kusanagi would replace in the organization had she not joined Section 9; Raizo (ライゾー Raizō?), voiced by Takanori Hoshino, a combat cyborg for the 501 Organization that uses electricity as weapons; Ibachi (イバチ?), voiced by Masahiro Mamiya, a combat cyborg for the 501 Organization skilled in bōjutsu and armed with hidden machine guns; Tsumugi (ツムギ?), voiced by Kenji Nojima, a tactical cyborg for the 501 Organization that has a set of twins' cyberbrains in its head who always talk to each other; and Lieutenant colonel Mamuro (マムロ?), voiced by Atsushi Miyauchi, the leader of the 501 Organization who raised Kusanagi but has disappeared, having had something to do with arms dealing.
+						New characters in the first of the episodes include Kurtz (クルツ Kurutsu?), voiced by Mayumi Asano in Japanese and by Mary Elizabeth McGlynn (the previous voice of the Major) in English, the head of the Army 501 Organization (陸軍５０１機関 Rikugun Go Maru Ichi Kikan?), the firm who converted Motoko Kusanagi into a full cyborg and who Kusanagi would replace in the organization had she not joined Section 9; Raizo (ライゾー Raizō?), voiced by Takanori Hoshino, a combat cyborg for the 501 Organization that uses electricity as weapons; Ibachi (イバチ?), voiced by Masahiro Mamiya, a combat cyborg for the 501 Organization skilled in bōjutsu and armed with hidden machine guns; Tsumugi (ツムギ?), voiced by Kenji Nojima, a tactical cyborg for the 501 Organization that has a set of twins' cyberbrains in its head who always talk to each other; and Lieutenant colonel Mamuro (マムロ?), voiced by Atsushi Miyauchi, the leader of the 501 Organization who raised Kusanagi but has disappeared, having had something to do with arms dealing.</p>
 					</div>
 				</div>
-				<div class="row f_elast" style="background-color: #456; overflow: hidden; ">
+				<div class="row f_elast" style="background-color: #456; position: relative; overflow-y: scroll;">
 					<div class="col-lg-12">
-						Arise features a brand new voice cast, compared with the casts of the original film and Stand Alone Complex television anime series. Maaya Sakamoto replaces Atsuko Tanaka as the voice of Major Motoko Kusanagi, Sakamoto having only previously voiced the Major as a child.[2] Other changes to the cast include Kenichirou Matsuda as Batou, Tarusuke Shingaki as Togusa, Ikyuu Jyuku as Chief Daisuke Aramaki, Tomoyuki Dan as Ishikawa, Takuro Nakakuni as Saito, Yōji Ueda as Paz, and Kazuya Nakai as Borma.[4] Miyuki Sawashiro will provide the voice of the series' think tanks the Logicoma (ロジコマ Rojikoma?), short for Logistics Conveyer Machine (ロジスティックス・コンベイヤー・マシン Rojisutikkusu Konbeiyā Mashin?). The Logicoma will also feature in anime shorts included on the Blu-ray releases titled Logicoma Beat (ロジコマ・ビート Rojikoma Bīto?).
-
-						New characters in the first of the episodes include Kurtz (クルツ Kurutsu?), voiced by Mayumi Asano in Japanese and by Mary Elizabeth McGlynn (the previous voice of the Major) in English, the head of the Army 501 Organization (陸軍５０１機関 Rikugun Go Maru Ichi Kikan?), the firm who converted Motoko Kusanagi into a full cyborg and who Kusanagi would replace in the organization had she not joined Section 9; Raizo (ライゾー Raizō?), voiced by Takanori Hoshino, a combat cyborg for the 501 Organization that uses electricity as weapons; Ibachi (イバチ?), voiced by Masahiro Mamiya, a combat cyborg for the 501 Organization skilled in bōjutsu and armed with hidden machine guns; Tsumugi (ツムギ?), voiced by Kenji Nojima, a tactical cyborg for the 501 Organization that has a set of twins' cyberbrains in its head who always talk to each other; and Lieutenant colonel Mamuro (マムロ?), voiced by Atsushi Miyauchi, the leader of the 501 Organization who raised Kusanagi but has disappeared, having had something to do with arms dealing.
-						Arise features a brand new voice cast, compared with the casts of the original film and Stand Alone Complex television anime series. Maaya Sakamoto replaces Atsuko Tanaka as the voice of Major Motoko Kusanagi, Sakamoto having only previously voiced the Major as a child.[2] Other changes to the cast include Kenichirou Matsuda as Batou, Tarusuke Shingaki as Togusa, Ikyuu Jyuku as Chief Daisuke Aramaki, Tomoyuki Dan as Ishikawa, Takuro Nakakuni as Saito, Yōji Ueda as Paz, and Kazuya Nakai as Borma.[4] Miyuki Sawashiro will provide the voice of the series' think tanks the Logicoma (ロジコマ Rojikoma?), short for Logistics Conveyer Machine (ロジスティックス・コンベイヤー・マシン Rojisutikkusu Konbeiyā Mashin?). The Logicoma will also feature in anime shorts included on the Blu-ray releases titled Logicoma Beat (ロジコマ・ビート Rojikoma Bīto?).
-
-						New characters in the first of the episodes include Kurtz (クルツ Kurutsu?), voiced by Mayumi Asano in Japanese and by Mary Elizabeth McGlynn (the previous voice of the Major) in English, the head of the Army 501 Organization (陸軍５０１機関 Rikugun Go Maru Ichi Kikan?), the firm who converted Motoko Kusanagi into a full cyborg and who Kusanagi would replace in the organization had she not joined Section 9; Raizo (ライゾー Raizō?), voiced by Takanori Hoshino, a combat cyborg for the 501 Organization that uses electricity as weapons; Ibachi (イバチ?), voiced by Masahiro Mamiya, a combat cyborg for the 501 Organization skilled in bōjutsu and armed with hidden machine guns; Tsumugi (ツムギ?), voiced by Kenji Nojima, a tactical cyborg for the 501 Organization that has a set of twins' cyberbrains in its head who always talk to each other; and Lieutenant colonel Mamuro (マムロ?), voiced by Atsushi Miyauchi, the leader of the 501 Organization who raised Kusanagi but has disappeared, having had something to do with arms dealing.
+						<div class="f_suggest_node">
+							<span>234567890-</span>
+							<span class="clearfix"></span>
+							<span>wertyuiop[</span>
+							<span class="clearfix"></span>
+							<span>234567890-</span>
+							<span class="clearfix"></span>
+							<span>wertyuiop[</span>
+						</div>
+						<div class="f_suggest_node">
+							<span>234567890-</span>
+							<span class="clearfix"></span>
+							<span>wertyuiop[</span>
+							<span class="clearfix"></span>
+							<span>234567890-</span>
+							<span class="clearfix"></span>
+							<span>wertyuiop[</span>
+						</div>
+						<div class="f_suggest_node">
+							<span>234567890-</span>
+							<span class="clearfix"></span>
+							<span>wertyuiop[</span>
+							<span class="clearfix"></span>
+							<span>234567890-</span>
+							<span class="clearfix"></span>
+							<span>wertyuiop[</span>
+						</div>
+						<div class="f_suggest_node">
+							<span>234567890-</span>
+							<span class="clearfix"></span>
+							<span>wertyuiop[</span>
+							<span class="clearfix"></span>
+							<span>234567890-</span>
+							<span class="clearfix"></span>
+							<span>wertyuiop[</span>
+						</div>
+						<div class="f_suggest_node">
+							<span>234567890-</span>
+							<span class="clearfix"></span>
+							<span>wertyuiop[</span>
+							<span class="clearfix"></span>
+							<span>234567890-</span>
+							<span class="clearfix"></span>
+							<span>wertyuiop[</span>
+						</div>
+						<div class="f_suggest_node">
+							<span>234567890-</span>
+							<span class="clearfix"></span>
+							<span>wertyuiop[</span>
+							<span class="clearfix"></span>
+							<span>234567890-</span>
+							<span class="clearfix"></span>
+							<span>wertyuiop[</span>
+						</div>
+						<div class="f_suggest_node">
+							<span>234567890-</span>
+							<span class="clearfix"></span>
+							<span>wertyuiop[</span>
+							<span class="clearfix"></span>
+							<span>234567890-</span>
+							<span class="clearfix"></span>
+							<span>wertyuiop[</span>
+						</div>
+						<div class="f_suggest_node">
+							<span>234567890-</span>
+							<span class="clearfix"></span>
+							<span>wertyuiop[</span>
+							<span class="clearfix"></span>
+							<span>234567890-</span>
+							<span class="clearfix"></span>
+							<span>wertyuiop[</span>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -82,10 +148,13 @@
 			var height08 = ($(window).height()*0.8)+'px';
 			var height01 = ($(window).height()*0.1)+'px';
 
+				
+
 			
-			$(document).ready(function(){
-				$('.f_elast').height(height03)
-			});
+		//	$(document).ready(function(){
+				$('.f_elast').height(height03);
+				//$('.f_elast').css('overflow-y', 'hidden');
+		//	});
 	 
 			
 			//new mlPushMenu( document.getElementById( 'mp-menu' ), document.getElementById( 'trigger' ) );
@@ -96,16 +165,13 @@
 				}, 370, function() {
 
 				});
-				$(this).css('overflow-y','scroll');
-				//$(this).css('height','70vh');
-				$(this).siblings('.f_elast').css('overflow','hidden');
 
 				$(this).siblings('.f_elast').animate({
 					height: height01
-				}, 370, function() {
-
-				});
-				//$(this).siblings('.f_elast').css('height','15vh');
+				}, 370, function() {});
+				//$(this).siblings('.f_elast').css('overflow-y','hidden');
+			//	$(this).removeAttr('style');
+				//$(this).css('overflow-y', 'scroll !important');
 			});
 
 
